changes files index.html styles.css

--- a/index.html
+++ b/index.html
@@ -44,9 +44,22 @@
             <input id="Birthdate" type="text" name="birthdate" />
         </label>
 
-        <label class="Gender" for="Gender">
+        <div class="Gender">
             Gender
-            <input id="Gender" type="checkbox" name="gender" />
+        </div>
+        <input type="checkbox" name="a1">Female<br>
+        <input type="checkbox" name="a1">Male<br>
+        <input type="checkbox" name="a1">Others<br>
+    </div>
+
+        <label class="Mobile" for="Mobile">
+            Mobile phone
+            <input id="Mobile" type="text" name="mobile" />
+        </label>
+
+        <label class="Adress" for="Adress">
+            Adress
+            <input id="Adress" type="text" name="adress" />
         </label>
 
     </div>
